{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 14,
  "lineage": "cfa75ac5-384a-86a8-32d5-f657a90360c4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f06fc963348528eb",
            "arn": "arn:aws:ec2:us-east-2:471112647960:elastic-ip/eipalloc-0f06fc963348528eb",
            "association_id": "eipassoc-0016a9ac0984b2a2c",
            "domain": "vpc",
            "id": "eipalloc-0f06fc963348528eb",
            "instance": "i-031d6529587a71b6d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-03dbc7221916c6182",
            "private_dns": "ip-10-0-60-208.us-east-2.compute.internal",
            "private_ip": "10.0.60.208",
            "public_dns": "ec2-18-224-92-5.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.92.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jenkins-test",
            "aws_security_group.security",
            "aws_subnet.subnet",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:471112647960:instance/i-031d6529587a71b6d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031d6529587a71b6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins-test2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03dbc7221916c6182",
            "private_dns": "ip-10-0-60-208.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.60.208",
            "public_dns": "ec2-3-144-92-152.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.92.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06912309bd1134e5f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e2df76e0dc392998"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e6193b2fc361121",
            "tags": {
              "Name": "jenkins-test"
            },
            "tags_all": {
              "Name": "jenkins-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2df76e0dc392998"
            ]
          },
          "dependencies": [
            "aws_security_group.security",
            "aws_subnet.subnet",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_env_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112647960:internet-gateway/igw-0e09ee9ba5d74e1fa",
            "id": "igw-0e09ee9ba5d74e1fa",
            "owner_id": "471112647960",
            "vpc_id": "vpc-0397c4657df1b0ec9"
          },
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112647960:route-table/rtb-0b4cd8278e04810a6",
            "id": "rtb-0b4cd8278e04810a6",
            "owner_id": "471112647960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e09ee9ba5d74e1fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0397c4657df1b0ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_env_gw",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5dcc4a9482f32cb",
            "route_table_id": "rtb-0b4cd8278e04810a6",
            "subnet_id": "subnet-03e6193b2fc361121"
          },
          "dependencies": [
            "aws_internet_gateway.test_env_gw",
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet",
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112647960:security-group/sg-0e2df76e0dc392998",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2df76e0dc392998",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to EC2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins to EC2",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-all",
            "name_prefix": "",
            "owner_id": "471112647960",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0397c4657df1b0ec9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112647960:subnet/subnet-03e6193b2fc361121",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e6193b2fc361121",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112647960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0397c4657df1b0ec9"
          },
          "dependencies": [
            "aws_vpc.test_env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112647960:vpc/vpc-0397c4657df1b0ec9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ac544223b4926e6",
            "default_route_table_id": "rtb-0be35c499c6cefda6",
            "default_security_group_id": "sg-04a3807e26f8a9f07",
            "dhcp_options_id": "dopt-02cd34887adbe96e5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0397c4657df1b0ec9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be35c499c6cefda6",
            "owner_id": "471112647960"
          }
        }
      ]
    }
  ]
}